--- a/configurator/pom.xml
+++ b/configurator/pom.xml
@@ -12,29 +12,90 @@
 
     <artifactId>configurator</artifactId>
 
-    <description>Setup up and launch the app</description>
+    <description>App configuration and boostrap</description>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.simonegiusso</groupId>
+            <artifactId>utils</artifactId>
+            <version>${revision}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.simonegiusso</groupId>
             <artifactId>app</artifactId>
             <version>${revision}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- Driven adapters -->
+        <dependency>
+            <groupId>org.simonegiusso</groupId>
+            <artifactId>timeseries-source-postgres</artifactId>
+            <version>${revision}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.simonegiusso</groupId>
-            <artifactId>driving-adapters</artifactId>
+            <artifactId>timeseries-source-cassandra</artifactId>
             <version>${revision}</version>
+            <scope>runtime</scope>
         </dependency>
+        <!-- Driving adapters -->
         <dependency>
             <groupId>org.simonegiusso</groupId>
-            <artifactId>driven-adapters</artifactId>
+            <artifactId>asset-info-rest</artifactId>
             <version>${revision}</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <artifactId>spring-boot-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.simonegiusso</groupId>
+            <artifactId>test-utils</artifactId>
+            <version>${revision}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>cassandra</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Create executable jar -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>app</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
